# dust_galaxy_sed

./: .gitignore  MACS0416Y1.ipynb  README.md  example.ipynb  example.py  make_observation_data.ipynb  mcmc.ipynb  mcmc_test.py  requirements.txt  sed.ipynb  sed.py  sedの表示.ipynb  setup.py
galaxy_sed/: diagram.py  hyperparams.py  mcmc.py  sed.py  sed_model.py
galaxy_sed/Dust_cpp_pybind/: CMakeLists.txt
galaxy_sed/Dust_cpp_pybind/data/SN_dust_mass/: mass.m13.data  mass.m20.data  mass.m25.data  mass.m30.data
galaxy_sed/Dust_cpp_pybind/data/dest_eta/: #mswept.dat#
galaxy_sed/Dust_cpp_pybind/data/size_distribution/agbdust/: calc_lognormal.c  gradis_agb.ps  pl_sizedistribution.pro  snsize_BS07.ods
galaxy_sed/Dust_cpp_pybind/data/size_distribution/newformdust/: 13form.new.data  20form.new.data  25form.new.data  30form.new.data
galaxy_sed/Dust_cpp_pybind/data/size_distribution/shockeddust/: 13n0.03.data  13n0.1.data  13n0.3.data  13n1.data  13n10.data  13n3.data  13n30.data  20n0.03.data  20n0.1.data  20n0.3.data  20n1.data  20n10.data  20n3.data  20n30.data  25n0.03.data  25n0.1.data  25n0.3.data  25n1.data  25n10.data  25n3.data  25n30.data  30n0.03.data  30n0.1.data  30n0.3.data  30n1.data  30n10.data  30n3.data  30n30.data
galaxy_sed/Dust_cpp_pybind/data/size_distribution/shockeddust/linear/: README.md
galaxy_sed/Dust_cpp_pybind/data/size_distribution/shockeddust/linear/num_den1/: gradis_sn13.ps  gradis_sn20.ps  gradis_sn25.ps  gradis_sn30.ps  massdis_sn30.ps  pl_sizedistribution.pro
galaxy_sed/Dust_cpp_pybind/data/totalmetal/: AGBmetaldata.ods  SNmetaldata_z0.0.ods  SNmetaldata_z0.001.ods  SNmetaldata_z0.004.ods  SNmetaldata_z0.02.ods  interpolate_metal_karakas.c  interpolate_metal_kobayashi.c  interpolate_smass.c  readme.txt  ~$AGBmetaldata.ods
galaxy_sed/Dust_cpp_pybind/data/totalremnant/: interpolate_rem_karakas.c  interpolate_rem_kobayashi.c  interpolate_rem_smass.c  readme.txt
galaxy_sed/Dust_cpp_pybind/include/: SED_file_util.h  SED_model.h  SED_setting_util.h  asano_model.h  averaged_dust_propery.h  calculation_util.h  combine_SED.h  constants.h  container_util.h  dust_evolution.h  dust_radiation.h  dust_temperature.h  dust_util.h  file_name.h  file_util.h  free_parameter.h  function.h  mc_dust_hit.h  radiative_transfer.h  read.h  read_file.h  spectra.h  star_formation_history.h  stellar_spectrum.h
galaxy_sed/Dust_cpp_pybind/main/: CMakeLists.txt  main.cpp
galaxy_sed/Dust_cpp_pybind/src/: CMakeLists.txt  asano_model.cpp  dust_evolution.cpp  function.cpp
galaxy_sed/bindings/: CMakeLists.txt  pybind_wrapper.cpp
galaxy_sed/cpp/: CMakeLists.txt  sed_calculator.cpp  sed_calculator.hpp
